--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,8 @@
     <script src="lib/angular-ui-router-0.2.0.js" type="text/javascript"></script>
     <script src="js/services.js" type="text/javascript"></script>
     <script src="js/directives.js" type="text/javascript"></script>
+    <script src="js/utils-services.js" type="text/javascript"></script>
+    <script src="js/conference-services.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
   </head>
   <body ui-view>
