--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 <html ng-app="Calendar">
   <head>
+    <link rel="stylesheet/less" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet/less" type="text/css" href="css/devoxx.less?d1" />
+    <script src="lib/jquery-2.0.3.js" type="text/javascript"></script>
     <script src="lib/less-1.5.0.min.js" type="text/javascript"></script>
     <script src="lib/angular.js" type="text/javascript"></script>
     <script src="lib/angular-ui-router-0.2.0.js" type="text/javascript"></script>
+    <script src="lib/bootstrap.js" type="text/javascript"></script>
     <script src="js/services.js" type="text/javascript"></script>
     <script src="js/directives.js" type="text/javascript"></script>
     <script src="js/utils-services.js" type="text/javascript"></script>
