Add a sidebar for event informations

--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<html ng-app="Calendar">
+<html ng-app="Calendar" ng-class="{ sidebar: sidebar }">
   <head>
     <link rel="stylesheet/less" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet/less" type="text/css" href="css/devoxx.less?d1" />
