Add a title (avoid displaying index.html in the titlebar)

--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <script src="js/utils-services.js" type="text/javascript"></script>
     <script src="js/conference-services.js" type="text/javascript"></script>
     <script src="js/app.js" type="text/javascript"></script>
+    <title>Conference Calendar</title>
   </head>
   <body ui-view>
   </body>
